# ChangeLog for app-misc/cl-printer-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-printer-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-printer-meta-11.0-r3.ebuild, +cl-printer-meta-11.3.ebuild:
  Version bump.

*cl-printer-meta-11.0-r3 (29 Jan 2011)

  29 Jan 2011; Трацевский Александр <alex@gentoo.org>
  -cl-printer-meta-11.0-r2.ebuild, +cl-printer-meta-11.0-r3.ebuild:
  Added support Samsung printers

*cl-printer-meta-11.0 (09 Dec 2010)

  09 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> -cl-printer-meta-10.9-r1.ebuild,
  +cl-printer-meta-11.0.ebuild:
  Version bump

*cl-printer-meta-10.9-r1 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-printer-meta-10.9.ebuild, +cl-printer-meta-10.9-r1.ebuild:
  Added scanner soft.

  24 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-printer-meta-10.9.ebuild:
  Removed foo2zjs

*cl-printer-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-printer-meta-10.8.81.ebuild, +cl-printer-meta-10.9.ebuild:
  new version

*cl-printer-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-printer-meta-10.5.83.ebuild, +cl-printer-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-printer-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-printer-meta-10.5.83.ebuild:
  version bump
