@@ -1,2 +1,3 @@
+EBUILD cl-printer-meta-11.3-r1.ebuild 508 RMD160 add1c0e16d1d22d583ac1106d3a59dbc69dbb056 SHA1 768c4593a30054654a5fd48257329ac39117fd21 SHA256 c6daf99cae0eb6384f11c5a8bdd5e6dd07d6c5a15a54cd4e753939272772eefc
 EBUILD cl-printer-meta-11.3.ebuild 484 RMD160 7b907e5ea140bc9609e573b2c2e56349bd49ecfa SHA1 925b44968ee27a93e9f0e814af9d9817730739e8 SHA256 fa0a89e788c6ce0ca1fb800a06a13742a9f5fa02750125e8de90bfe7645392ac
-MISC ChangeLog 1576 RMD160 ec530254bc16d881a148fb2ffb39329e83628a70 SHA1 73fee775c218486956693081d3e84f57d0ea9fc0 SHA256 8b803bca9a9036651e3a13b22ba3af975954ba3cd7d83d3578bbb33353100742
+MISC ChangeLog 1746 RMD160 33c78775e49e32cffc05253ae1a0bd9cafacb309 SHA1 055d5b677cf2cfba92ff7ca273819807d471ec22 SHA256 a5fe7972971f7b664a7b35d7f5ad09ec912269a55f06025d88bdd7c53800fef2
