@@ -1,0 +1,27 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=2
+
+DESCRIPTION="Calculate Linux (printer/scanner meta package)"
+HOMEPAGE="http://www.calculate-linux.org"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="amd64 x86"
+IUSE=""
+
+# Developer
+RDEPEND="
+	media-gfx/xsane
+	net-print/cndrvcups-capt
+	net-print/cnijfilter
+	net-print/cups
+	net-print/gutenprint
+	net-print/hplip
+	net-print/hplip-plugin
+	net-print/samsung-unified-linux-driver
+"
+
