@@ -1,8 +1,6 @@
 ~app-arch/p7zip-9.13 amd64 x86
 ~app-cdr/k3b-2.0.2 amd64 x86
 ~app-office/akonadi-server-1.5.0 x86 amd64
-~app-text/goldendict-1.0.1 x86 amd64
-~dev-libs/glib-2.26.1-r1 x86 amd64
 ~dev-libs/libattica-0.2.0 amd64 x86
 ~dev-libs/libf2c-20090407 amd64 x86
 ~dev-libs/shared-desktop-ontologies-0.5 x86 amd64
@@ -26,7 +24,7 @@
 ~media-libs/phonon-vlc-0.3.2 x86 amd64
 ~media-libs/phonon-xine-4.4.4 x86 amd64
 ~media-plugins/kipi-plugins-1.9.0 amd64 x86
-~media-sound/amarok-2.4.0 x86 amd64
+~media-sound/amarok-2.4.1 x86 amd64
 ~media-video/kdenlive-0.7.8 amd64 x86
 ~net-im/choqok-1.1 amd64 x86
 ~net-libs/libktorrent-1.0.5.3 amd64 x86
