@@ -1,10 +1,7 @@
-~dev-lang/python-2.7.1 amd64 x86
-
+~sys-apps/portage-2.2.0_alpha32 amd64 x86
 ~sys-apps/portage-2.2.0_alpha31 amd64 x86
-~sys-apps/portage-2.2.0_alpha30 amd64 x86
 
-~sys-apps/openrc-0.8.2 amd64 x86
-~sys-apps/openrc-0.8.1 amd64 x86
+=sys-apps/openrc-0.8.2 amd64 x86
 
 ~sys-fs/squashfs-tools-4.2 amd64 x86
 
@@ -19,10 +16,10 @@
 
 ~net-print/cnijfilter-3.20 amd64 x86
 
-~net-print/hplip-3.11.1 amd64 x86
+~net-print/hplip-3.11.3a amd64 x86
+~net-print/hplip-plugin-3.11.3a amd64 x86
 
 ~net-print/gutenprint-5.2.6 amd64 x86
-~net-print/gutenprint-5.2.5 amd64 x86
 
 # need for unzip-6.0-r9
 ~dev-libs/libnatspec-0.2.6 amd64 x86
